--- a/skeletor.styl
+++ b/skeletor.styl
@@ -10,4 +10,8 @@
 *
 --------------------------------------------------------------------*/
 
-@import 'components/base'
+//- Variables
+@import 'styl/globals/_variables'
+
+//- Components
+@import 'styl/components/base'
