--- a/styl/components/base.styl
+++ b/styl/components/base.styl
@@ -13,6 +13,7 @@ html
   font-size: 100%
 
 body
+  font-size: $font-base
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
 
