[ux] fiddle with typography

--- a/styl/globals/_variables.styl
+++ b/styl/globals/_variables.styl
@@ -4,6 +4,10 @@
 *
 --------------------------------------------------------------------*/
 
-$font-base = 1rem
+$font-serif = 'Calendas Plus', Georgia, Times, serif
+
+$font-base = 1.125rem
 $font-large = $font-base*1.5
-$font-small = $font-base*0.75
+$font-small = $font-base*0.8
+
+$line-height-base = 1.5
