--- a/styl/components/base.styl
+++ b/styl/components/base.styl
@@ -13,7 +13,7 @@ html
   font-size: 100%
 
 body
-  font-size: $font-base
+  font: $font-base/$line-height-base $font-serif
   text-rendering: optimizeLegibility
   -webkit-font-smoothing: antialiased
 
@@ -28,3 +28,6 @@ body
 
 a
   cursor: pointer
+
+small
+  font-size: $font-small
