[ux] work out font sizes and line heights

--- a/styl/components/base.styl
+++ b/styl/components/base.styl
@@ -26,6 +26,30 @@ body
   &:after
     clear: both
 
+h1, h2, h3, h4, h5, h6
+  font-weight: bold
+
+h1, h2, h3
+  line-height: $line-height-tight
+
+h1
+  font-size: $font-heading-one
+
+h2
+  font-size: $font-heading-two
+
+h3
+  font-size: $font-heading-three
+
+h4
+  font-size: $font-heading-four
+
+h5
+  font-size: $font-heading-five
+
+h6
+  font-size: $font-heading-six
+
 a
   cursor: pointer
 
