--- a/styl/globals/_variables.styl
+++ b/styl/globals/_variables.styl
@@ -4,10 +4,27 @@
 *
 --------------------------------------------------------------------*/
 
+//- Font Families - Customize it!
 $font-serif = 'Calendas Plus', Georgia, Times, serif
+$font-sans = Helvetica, Arial, sans-serif
 
-$font-base = 1.125rem
+//- Font Sizes
+
+$font-base = 1rem
 $font-large = $font-base*1.5
-$font-small = $font-base*0.8
+$font-small = $font-base*0.75
+
+//- Headings Font Sizes
+
+$font-heading-one = $font-base*3
+$font-heading-two = $font-base*2.6
+$font-heading-three = $font-base*2.2
+$font-heading-four = $font-base*1.8
+$font-heading-five = $font-base*1.2
+$font-heading-six = $font-base*0.8
+
+//- Line Heights
 
 $line-height-base = 1.5
+$line-height-tight = $line-height-base*0.8
+$line-height-spaced = $line-height-base*1.2
