[ux] delete custom font dependency

--- a/styl/globals/_variables.styl
+++ b/styl/globals/_variables.styl
@@ -5,7 +5,7 @@
 --------------------------------------------------------------------*/
 
 //- Font Families - Customize it!
-$font-serif = 'Calendas Plus', Georgia, Times, serif
+$font-serif = Georgia, Times, serif
 $font-sans = Helvetica, Arial, sans-serif
 
 //- Font Sizes
