move out skeletor.styl :arrow_right: styl folder

--- a/styl/skeletor.styl
+++ b/styl/skeletor.styl
@@ -11,8 +11,8 @@
 --------------------------------------------------------------------*/
 
 //- Variables
-@import 'styl/globals/_variables'
+@import 'globals/_variables'
 
 //- Components
-@import 'styl/components/base'
-@import 'styl/components/lists'
+@import 'components/base'
+@import 'components/lists'
